# a-simple-llm-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.claude/agents/: framework-analyst.md  production-engineer.md  scratch-builder.md  trends-scout.md
docs/research/: agent-latency-2026.md  agent-tool-surface-2026.md  agentic-retrieval-evaluation.md  ai-evals-guide.md  citation-best-practices.md  classical-ir-for-llm-agents.md  cli-output-display.md  code-as-tool-orchestration.md  code-execution-with-mcp.md  code-mode-2026-landscape.md  context-engineering-for-agent-loops.md  context-window-management.md  counterfactual-evaluation.md  file-exploration-tools.md  framework-analyst-r1.md  framework-analyst-r2.md  grep-vs-vector-search.md  grounding-agent-in-tool-results.md  harness-briefing.md  latency-reduction-for-agentic-loops.md  model-requirements-for-agents.md  modular-system-prompt-composition.md  production-engineer-r1.md  production-engineer-r2.md  pydantic-ai-temporal-vs-langgraph.md  retrieval-eval-for-tool-agents.md  sandboxed-code-execution.md  scratch-builder-r1.md  scratch-builder-r2.md  search-strategy-planning.md  system-prompt-composition.md  system-prompt-for-tool-agents.md  system-vs-task-prompt-separation.md  test-workspace-corpora.md  token-caching-and-tool-definitions.md  trends-scout-r1.md  trends-scout-r2.md  type-safety-in-llm-harnesses.md
notebooks/: trace_analysis.ipynb  trace_viewer.py
sandbox/: Dockerfile
scripts/: collect_traces.py  prepare_sec_eval.py  questions.py  reporting.py
src/llm_harness/: __main__.py  agent.py  citations.py  display.py  files.py  prompt.py  sandbox.py  sandbox_e2b.py  telemetry.py  tools.py  trace_viewer.py  types.py
test-data/federalist-papers/: federalist-01-general-introduction.txt  federalist-02-concerning-dangers-from-foreign-force-and-influence.txt  federalist-03-the-same-subject-continued.txt  federalist-04-the-same-subject-continued.txt  federalist-05-the-same-subject-continued.txt  federalist-06-concerning-dangers-from-dissensions-between-the-states.txt  federalist-07-the-same-subject-continued.txt  federalist-29-concerning-the-militia.txt  (+78 more)
tests/: conftest.py  test_agent.py  test_citations.py  test_files.py  test_retrieval_grounding.py  test_sandbox.py  test_telemetry.py  test_tools.py
(+66 files in other folders)
