[project]
name = "a-simple-llm-harness"
version = "0.1.0"
description = "Generic LLM agent harness with tool-use support"
readme = "README.md"
authors = [
    { name = "chuckfinca", email = "charles@appsimple.io" }
]
requires-python = ">=3.12"
dependencies = ["litellm>=1.60", "rich>=14"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llm_harness"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12",
    "gradio>=5.0",
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: slow tests that make real LLM API calls and run Docker containers",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "C90", "UP", "SIM", "S", "A", "RUF", "PIE", "PERF", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/prepare_sec_eval.py" = ["S310"]
"src/llm_harness/sandbox.py" = ["S603", "S607"]
"app.py" = ["S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
